--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="I9VmYLSSrmnWbR4NWPpemXtEIOIkh3zpwsyIP3N9ZFs" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PickleTown 6200 | Dumaguete City Pickleball Community</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
